# data-validator-dblink

./: .env.example  .gitignore  CLAUDE.md  README.md  analysis_results.md  main.py  pyproject.toml  requirements.txt  test_connection.py  test_connection_pool.py
config/: sample_config.json
src/data_validator/: config.py  orchestrator.py
src/data_validator/db/: connection.py  repository.py
src/data_validator/utils/: email_sender.py  window_checker.py
src/data_validator/validators/: table_validator.py
tests/: test_config.py  test_env_config.py  test_window_checker.py
